core/unpackaged/main/default/objects/LogEntry__c/fields/HasHttpRequestHeaderKeys__c.field-meta.xml
<CustomField>
    <fullName>HasHttpRequestHeaderKeys__c</fullName>
    <complianceGroup>None</complianceGroup>
    <defaultValue>false</defaultValue>
    <label>Has HTTP Request Header Keys</label>
    <type>Checkbox</type>
</CustomField>