core/unpackaged/main/default/objects/LogEntry__c/fields/HasHttpResponseHeaderKeys__c.field-meta.xml
<CustomField>
    <fullName>HasHttpResponseHeaderKeys__c</fullName>
    <complianceGroup>None</complianceGroup>
    <defaultValue>false</defaultValue>
    <label>Has HTTP Response Header Keys</label>
    <type>Checkbox</type>
</CustomField>