core/unpackaged/main/default/objects/LogEntry__c/fields/HasHttpResponseHeaders__c.field-meta.xml
<CustomField>
    <fullName>HasHttpResponseHeaders__c</fullName>
    <complianceGroup>None</complianceGroup>
    <defaultValue>false</defaultValue>
    <label>Has HTTP Response Headers</label>
    <type>Checkbox</type>
</CustomField>