core/unpackaged/main/default/objects/LogEntry__c/fields/HasInlineTags__c.field-meta.xml
<CustomField>
    <fullName>HasInlineTags__c</fullName>
    <complianceGroup>None</complianceGroup>
    <defaultValue>false</defaultValue>
    <label>Has Inline Tags</label>
    <type>Checkbox</type>
</CustomField>