core/unpackaged/main/default/objects/LogEntry__c/fields/HasRestRequestHeaderKeys__c.field-meta.xml
<CustomField>
    <fullName>HasRestRequestHeaderKeys__c</fullName>
    <complianceGroup>None</complianceGroup>
    <defaultValue>false</defaultValue>
    <label>Has REST Request Header Keys</label>
    <type>Checkbox</type>
</CustomField>