core/unpackaged/main/default/objects/LogEntry__c/fields/HasStackTrace__c.field-meta.xml
<CustomField>
    <fullName>HasStackTrace__c</fullName>
    <complianceGroup>None</complianceGroup>
    <defaultValue>false</defaultValue>
    <label>Has Stack Trace</label>
    <type>Checkbox</type>
</CustomField>