core/unpackaged/main/default/objects/LogEntry__c/fields/HttpRequestHeaders__c.field-meta.xml
<CustomField>
    <fullName>HttpRequestHeaders__c</fullName>
    <complianceGroup>None</complianceGroup>
    <label>HTTP Request Headers</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>