core/unpackaged/main/default/objects/LogEntry__c/fields/HttpResponseStatusCode__c.field-meta.xml
<CustomField>
    <fullName>HttpResponseStatusCode__c</fullName>
    <complianceGroup>None</complianceGroup>
    <label>HTTP Response Status Code</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>