core/unpackaged/main/default/objects/LogEntry__c/fields/ImpersonatedByUsernameLink__c.field-meta.xml
<CustomField>
    <fullName>ImpersonatedByUsernameLink__c</fullName>
    <complianceGroup>PII;GDPR;CCPA</complianceGroup>
    <formula>Log__r.ImpersonatedByUsernameLink__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Impersonated By Username</label>
    <type>Text</type>
</CustomField>