core/unpackaged/main/default/objects/LogEntry__c/fields/LimitsAggregateQueries__c.field-meta.xml
<CustomField>
    <fullName>LimitsAggregateQueries__c</fullName>
    <complianceGroup>None</complianceGroup>
    <formula>IF(
        (LimitsAggregateQueriesUsed__c / LimitsAggregateQueriesMax__c * 100) &gt;= 90,
        "⛔",
        IF(
            (LimitsAggregateQueriesUsed__c / LimitsAggregateQueriesMax__c * 100) &lt; 90 &amp;&amp; (LimitsAggregateQueriesUsed__c / LimitsAggregateQueriesMax__c * 100) &gt;= 80,
            "⚠️",
            "✅"
        )
    )
    + ' ' + IF(LimitsAggregateQueriesMax__c = 0, '100', TEXT(ROUND(LimitsAggregateQueriesUsed__c / LimitsAggregateQueriesMax__c * 100, 2))) + '% ('
    + TEXT(LimitsAggregateQueriesUsed__c) + ' / ' + TEXT(LimitsAggregateQueriesMax__c) + ')'</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>✅ when 80% or less of the limit is used, ⚠️ when 80.1-89.9% is used, or ⛔ when 90% or more is used</inlineHelpText>
    <label>Aggregate Queries</label>
    <type>Text</type>
</CustomField>