core/unpackaged/main/default/objects/LogEntry__c/fields/LimitsApexCursorFetchCalls__c.field-meta.xml
<CustomField>
    <fullName>LimitsApexCursorFetchCalls__c</fullName>
    <complianceGroup>None</complianceGroup>
    <formula>IF(
        (LimitsApexCursorFetchCallsUsed__c / LimitsApexCursorFetchCallsMax__c * 100) &gt;= 90,
        "⛔",
        IF(
            (LimitsApexCursorFetchCallsUsed__c / LimitsApexCursorFetchCallsMax__c * 100) &lt; 90 &amp;&amp; (LimitsApexCursorFetchCallsUsed__c / LimitsApexCursorFetchCallsMax__c * 100) &gt;= 80,
            "⚠️",
            "✅"
        )
    )
    + ' ' + IF(LimitsApexCursorFetchCallsMax__c = 0, '100', TEXT(ROUND(LimitsApexCursorFetchCallsUsed__c / LimitsApexCursorFetchCallsMax__c * 100, 2))) + '% ('
    + TEXT(LimitsApexCursorFetchCallsUsed__c) + ' / ' + TEXT(LimitsApexCursorFetchCallsMax__c) + ')'</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>✅ when 80% or less of the limit is used, ⚠️ when 80.1-89.9% is used, or ⛔ when 90% or more is used</inlineHelpText>
    <label>Apex Cursor Fetch Calls</label>
    <type>Text</type>
</CustomField>