core/unpackaged/main/default/objects/LogEntry__c/fields/LimitsApexCursorFetchCallsUsed__c.field-meta.xml
<CustomField>
    <fullName>LimitsApexCursorFetchCallsUsed__c</fullName>
    <label>Apex Cursor Fetch Calls Used</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>