core/unpackaged/main/default/objects/LogEntry__c/fields/LimitsApexCursorRows__c.field-meta.xml
<CustomField>
    <fullName>LimitsApexCursorRows__c</fullName>
    <complianceGroup>None</complianceGroup>
    <formula>IF(
        (LimitsApexCursorRowsUsed__c / LimitsApexCursorRowsMax__c * 100) &gt;= 90,
        "⛔",
        IF(
            (LimitsApexCursorRowsUsed__c / LimitsApexCursorRowsMax__c * 100) &lt; 90 &amp;&amp; (LimitsApexCursorRowsUsed__c / LimitsApexCursorRowsMax__c * 100) &gt;= 80,
            "⚠️",
            "✅"
        )
    )
    + ' ' + IF(LimitsApexCursorRowsMax__c = 0, '100', TEXT(ROUND(LimitsApexCursorRowsUsed__c / LimitsApexCursorRowsMax__c * 100, 2))) + '% ('
    + TEXT(LimitsApexCursorRowsUsed__c) + ' / ' + TEXT(LimitsApexCursorRowsMax__c) + ')'</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>✅ when 80% or less of the limit is used, ⚠️ when 80.1-89.9% is used, or ⛔ when 90% or more is used</inlineHelpText>
    <label>Apex Cursor Rows</label>
    <type>Text</type>
</CustomField>