core/unpackaged/main/default/objects/LogEntry__c/fields/LimitsAsyncCalls__c.field-meta.xml
<CustomField>
    <fullName>LimitsAsyncCalls__c</fullName>
    <complianceGroup>None</complianceGroup>
    <formula>IF(
        (LimitsAsyncCallsUsed__c / LimitsAsyncCallsMax__c * 100) &gt;= 90,
        "⛔",
        IF(
            (LimitsAsyncCallsUsed__c / LimitsAsyncCallsMax__c * 100) &lt; 90 &amp;&amp; (LimitsAsyncCallsUsed__c / LimitsAsyncCallsMax__c * 100) &gt;= 80,
            "⚠️",
            "✅"
        )
    )
    + ' ' + TEXT(ROUND(LimitsAsyncCallsUsed__c / LimitsAsyncCallsMax__c * 100, 2)) + '% ('
    + TEXT(LimitsAsyncCallsUsed__c) + ' / ' + TEXT(LimitsAsyncCallsMax__c) + ')'</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>✅ when 80% or less of the limit is used, ⚠️ when 80.1-89.9% is used, or ⛔ when 90% or more is used</inlineHelpText>
    <label>Async Calls</label>
    <type>Text</type>
</CustomField>