core/unpackaged/main/default/objects/LogEntry__c/fields/LimitsAsyncCallsMax__c.field-meta.xml
<CustomField>
    <fullName>LimitsAsyncCallsMax__c</fullName>
    <complianceGroup>None</complianceGroup>
    <label>Async Calls Max</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>