core/unpackaged/main/default/objects/LogEntry__c/fields/LimitsCallouts__c.field-meta.xml
<CustomField>
    <fullName>LimitsCallouts__c</fullName>
    <complianceGroup>None</complianceGroup>
    <formula>IF(
        (LimitsCalloutsUsed__c / LimitsCalloutsMax__c * 100) &gt;= 90,
        "⛔",
        IF(
            (LimitsCalloutsUsed__c / LimitsCalloutsMax__c * 100) &lt; 90 &amp;&amp; (LimitsCalloutsUsed__c / LimitsCalloutsMax__c * 100) &gt;= 80,
            "⚠️",
            "✅"
        )
    )
    + ' ' + TEXT(ROUND(LimitsCalloutsUsed__c / LimitsCalloutsMax__c * 100, 2)) + '% ('
    + TEXT(LimitsCalloutsUsed__c) + ' / ' + TEXT(LimitsCalloutsMax__c) + ')'</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>✅ when 80% or less of the limit is used, ⚠️ when 80.1-89.9% is used, or ⛔ when 90% or more is used</inlineHelpText>
    <label>Callouts</label>
    <type>Text</type>
</CustomField>