core/unpackaged/main/default/objects/LogEntry__c/fields/LimitsCalloutsUsed__c.field-meta.xml
<CustomField>
    <fullName>LimitsCalloutsUsed__c</fullName>
    <complianceGroup>None</complianceGroup>
    <label>Callouts Used</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>