core/unpackaged/main/default/objects/LogEntry__c/fields/LimitsCpuTime__c.field-meta.xml
<CustomField>
    <fullName>LimitsCpuTime__c</fullName>
    <complianceGroup>None</complianceGroup>
    <formula>IF(
        AND(
            LimitsCpuTimeMax__c != 0,
            (LimitsCpuTimeUsed__c / LimitsCpuTimeMax__c * 100) &gt;= 90
        ),
        "⛔",
        IF(
            OR(
                LimitsCpuTimeMax__c = 0,
                (LimitsCpuTimeUsed__c / LimitsCpuTimeMax__c * 100) &lt; 90 &amp;&amp; (LimitsCpuTimeUsed__c / LimitsCpuTimeMax__c * 100) &gt;= 80
            ),
            "⚠️",
            "✅"
        )
    )
    + ' ' + TEXT(ROUND(LimitsCpuTimeUsed__c / LimitsCpuTimeMax__c * 100, 2)) + '% ('
    + TEXT(LimitsCpuTimeUsed__c) + ' / ' + TEXT(LimitsCpuTimeMax__c) + ')'</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>✅ when 80% or less of the limit is used, ⚠️ when 80.1-89.9% is used, or ⛔ when 90% or more is used</inlineHelpText>
    <label>CPU Time</label>
    <type>Text</type>
</CustomField>