core/unpackaged/main/default/objects/LogEntry__c/fields/LimitsDmlRows__c.field-meta.xml
<CustomField>
    <fullName>LimitsDmlRows__c</fullName>
    <complianceGroup>None</complianceGroup>
    <formula>IF(
        (LimitsDmlRowsUsed__c / LimitsDmlRowsMax__c * 100) &gt;= 90,
        "⛔",
        IF(
            (LimitsDmlRowsUsed__c / LimitsDmlRowsMax__c * 100) &lt; 90 &amp;&amp; (LimitsDmlRowsUsed__c / LimitsDmlRowsMax__c * 100) &gt;= 80,
            "⚠️",
            "✅"
        )
    )
    + ' ' + TEXT(ROUND(LimitsDmlRowsUsed__c / LimitsDmlRowsMax__c * 100, 2)) + '% ('
    + TEXT(LimitsDmlRowsUsed__c) + ' / ' + TEXT(LimitsDmlRowsMax__c) + ')'</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>✅ when 80% or less of the limit is used, ⚠️ when 80.1-89.9% is used, or ⛔ when 90% or more is used</inlineHelpText>
    <label>DML Rows</label>
    <type>Text</type>
</CustomField>