core/unpackaged/main/default/objects/LogEntry__c/fields/LimitsDmlStatements__c.field-meta.xml
<CustomField>
    <fullName>LimitsDmlStatements__c</fullName>
    <complianceGroup>None</complianceGroup>
    <formula>IF(
        (LimitsDmlStatementsUsed__c / LimitsDmlStatementsMax__c * 100) &gt;= 90,
        "⛔",
        IF(
            (LimitsDmlStatementsUsed__c / LimitsDmlStatementsMax__c * 100) &lt; 90 &amp;&amp; (LimitsDmlStatementsUsed__c / LimitsDmlStatementsMax__c * 100) &gt;= 80,
            "⚠️",
            "✅"
        )
    )
    + ' ' + TEXT(ROUND(LimitsDmlStatementsUsed__c / LimitsDmlStatementsMax__c * 100, 2)) + '% ('
    + TEXT(LimitsDmlStatementsUsed__c) + ' / ' + TEXT(LimitsDmlStatementsMax__c) + ')'</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>✅ when 80% or less of the limit is used, ⚠️ when 80.1-89.9% is used, or ⛔ when 90% or more is used</inlineHelpText>
    <label>DML Statements</label>
    <type>Text</type>
</CustomField>