core/unpackaged/main/default/objects/LogEntry__c/fields/LimitsEmailInvocations__c.field-meta.xml
<CustomField>
    <fullName>LimitsEmailInvocations__c</fullName>
    <complianceGroup>None</complianceGroup>
    <formula>IF(
        (LimitsEmailInvocationsUsed__c / LimitsEmailInvocationsMax__c * 100) &gt;= 90,
        "⛔",
        IF(
            (LimitsEmailInvocationsUsed__c / LimitsEmailInvocationsMax__c * 100) &lt; 90 &amp;&amp; (LimitsEmailInvocationsUsed__c / LimitsEmailInvocationsMax__c * 100) &gt;= 80,
            "⚠️",
            "✅"
        )
    )
    + ' ' + TEXT(ROUND(LimitsEmailInvocationsUsed__c / LimitsEmailInvocationsMax__c * 100, 2)) + '% ('
    + TEXT(LimitsEmailInvocationsUsed__c) + ' / ' + TEXT(LimitsEmailInvocationsMax__c) + ')'</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>✅ when 80% or less of the limit is used, ⚠️ when 80.1-89.9% is used, or ⛔ when 90% or more is used</inlineHelpText>
    <label>Email Invocations</label>
    <type>Text</type>
</CustomField>