core/unpackaged/main/default/objects/LogEntry__c/fields/LimitsEmailInvocationsUsed__c.field-meta.xml
<CustomField>
    <fullName>LimitsEmailInvocationsUsed__c</fullName>
    <complianceGroup>None</complianceGroup>
    <label>Email Invocations Used</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>