core/unpackaged/main/default/objects/LogEntry__c/fields/LimitsFutureCalls__c.field-meta.xml
<CustomField>
    <fullName>LimitsFutureCalls__c</fullName>
    <complianceGroup>None</complianceGroup>
    <formula>IF(
        (LimitsFutureCallsUsed__c / LimitsFutureCallsMax__c * 100) &gt;= 90,
        "⛔",
        IF(
            (LimitsFutureCallsUsed__c / LimitsFutureCallsMax__c * 100) &lt; 90 &amp;&amp; (LimitsFutureCallsUsed__c / LimitsFutureCallsMax__c * 100) &gt;= 80,
            "⚠️",
            "✅"
        )
    )
    + ' ' + TEXT(ROUND(LimitsFutureCallsUsed__c / LimitsFutureCallsMax__c * 100, 2)) + '% ('
    + TEXT(LimitsFutureCallsUsed__c) + ' / ' + TEXT(LimitsFutureCallsMax__c) + ')'</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>✅ when 80% or less of the limit is used, ⚠️ when 80.1-89.9% is used, or ⛔ when 90% or more is used</inlineHelpText>
    <label>Future Calls</label>
    <type>Text</type>
</CustomField>