core/unpackaged/main/default/objects/LogEntry__c/fields/LimitsHeapSize__c.field-meta.xml
<CustomField>
    <fullName>LimitsHeapSize__c</fullName>
    <complianceGroup>None</complianceGroup>
    <formula>IF(
        (LimitsHeapSizeUsed__c / LimitsHeapSizeMax__c * 100) &gt;= 90,
        "⛔",
        IF(
            (LimitsHeapSizeUsed__c / LimitsHeapSizeMax__c * 100) &lt; 90 &amp;&amp; (LimitsHeapSizeUsed__c / LimitsHeapSizeMax__c * 100) &gt;= 80,
            "⚠️",
            "✅"
        )
    )
    + ' ' + TEXT(ROUND(LimitsHeapSizeUsed__c / LimitsHeapSizeMax__c * 100, 2)) + '% ('
    + TEXT(LimitsHeapSizeUsed__c) + ' / ' + TEXT(LimitsHeapSizeMax__c) + ')'</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>✅ when 80% or less of the limit is used, ⚠️ when 80.1-89.9% is used, or ⛔ when 90% or more is used</inlineHelpText>
    <label>Heap Size</label>
    <type>Text</type>
</CustomField>