core/unpackaged/main/default/objects/LogEntry__c/fields/LimitsHeapSizeMax__c.field-meta.xml
<CustomField>
    <fullName>LimitsHeapSizeMax__c</fullName>
    <complianceGroup>None</complianceGroup>
    <label>Heap Size Max</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>