core/unpackaged/main/default/objects/LogEntry__c/fields/LimitsMobilePushApexCalls__c.field-meta.xml
<CustomField>
    <fullName>LimitsMobilePushApexCalls__c</fullName>
    <complianceGroup>None</complianceGroup>
    <formula>IF(
        (LimitsMobilePushApexCallsUsed__c / LimitsMobilePushApexCallsMax__c * 100) &gt;= 90,
        "⛔",
        IF(
            (LimitsMobilePushApexCallsUsed__c / LimitsMobilePushApexCallsMax__c * 100) &lt; 90 &amp;&amp; (LimitsMobilePushApexCallsUsed__c / LimitsMobilePushApexCallsMax__c * 100) &gt;= 80,
            "⚠️",
            "✅"
        )
    )
    + ' ' + TEXT(ROUND(LimitsMobilePushApexCallsUsed__c / LimitsMobilePushApexCallsMax__c * 100, 2)) + '% ('
    + TEXT(LimitsMobilePushApexCallsUsed__c) + ' / ' + TEXT(LimitsMobilePushApexCallsMax__c) + ')'</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>✅ when 80% or less of the limit is used, ⚠️ when 80.1-89.9% is used, or ⛔ when 90% or more is used</inlineHelpText>
    <label>Mobile Push Apex Calls</label>
    <type>Text</type>
</CustomField>