core/unpackaged/main/default/objects/LogEntry__c/fields/LimitsMobilePushApexCallsMax__c.field-meta.xml
<CustomField>
    <fullName>LimitsMobilePushApexCallsMax__c</fullName>
    <complianceGroup>None</complianceGroup>
    <label>Mobile Push Apex Calls Max</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>