core/unpackaged/main/default/objects/LogEntry__c/fields/LimitsMobilePushApexCallsUsed__c.field-meta.xml
<CustomField>
    <fullName>LimitsMobilePushApexCallsUsed__c</fullName>
    <complianceGroup>None</complianceGroup>
    <label>Mobile Push Apex Calls Used</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>