core/unpackaged/main/default/objects/LogEntry__c/fields/LimitsPublishImmediateDmlStatements__c.field-meta.xml
<CustomField>
    <fullName>LimitsPublishImmediateDmlStatements__c</fullName>
    <complianceGroup>None</complianceGroup>
    <formula>IF(
        (LimitsPublishImmediateDmlStatementsUsed__c / LimitsPublishImmediateDmlStatementsMax__c * 100) &gt;= 90,
        "⛔",
        IF(
            (LimitsPublishImmediateDmlStatementsUsed__c / LimitsPublishImmediateDmlStatementsMax__c * 100) &lt; 90 &amp;&amp; (LimitsPublishImmediateDmlStatementsUsed__c / LimitsPublishImmediateDmlStatementsMax__c * 100) &gt;= 80,
            "⚠️",
            "✅"
        )
    )
    + ' ' + TEXT(ROUND(LimitsPublishImmediateDmlStatementsUsed__c / LimitsPublishImmediateDmlStatementsMax__c * 100, 2)) + '% ('
    + TEXT(LimitsPublishImmediateDmlStatementsUsed__c) + ' / ' + TEXT(LimitsPublishImmediateDmlStatementsMax__c) + ')'</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>✅ when 80% or less of the limit is used, ⚠️ when 80.1-89.9% is used, or ⛔ when 90% or more is used</inlineHelpText>
    <label>Publish Immediate DML Statements</label>
    <type>Text</type>
</CustomField>